fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fe-deployment
