fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: fe-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
